# boulder-dash.rs

./: Cargo.toml  README.md  shell.nix
config/: bindings.ron
resources/: display_config.ron
resources/map/: 01.txt  02.txt
resources/sprites/: grid.ron
src/: camera.rs  grid.rs  input.rs  main.rs  map.rs  state.rs  system.rs
src/state/: main_screen.rs  playing_map.rs
src/system/: camera.rs  grid.rs  input.rs  score.rs
