[package]
name = "bd"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz"]
description = "Remake of Boulder Dash in Rust, using Amethyst engine"
edition = "2018"
license = "MPL-2.0 OR MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
amethyst = "0.13.0"
log = { version = "0.4.8", features = ["serde"] }
anyhow = "*"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]

[profile.dev]
opt-level = 1
lto = false
debug = false
incremental = true
